.kube/proxima-db-api-external.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: proxima-db-api-deployment
#   labels: 
#     app: proxima-db-api
# spec: 
#   replicas: 1 
#   selector: 
#     matchLabels: 
#       app: proxima-db-api
#   templates: 
#     metadata: 
#       labels:
#        app: proxima-db-api 
#     spec: 
#       containers: 
#         - name: proxima-db-api
#           image: nginx
#           ports: 
#             - containerPort: 50051
#             - containerPort: 80
# --- 
apiVersion: v1
kind: Service 
metadata: 
  name: proxima-db-api-service
  labels: 
    app: proxima-db 
spec: 
  selector:
    app: proxima-db
  type: LoadBalancer 
  ports: 
    - protocol: TCP 
      port: 80 
      targetPort: 80
      nodePort: 30000
    - protocol: TCP 
      port: 50051
      targetPort: 50051
      nodePort: 30001
