.kube/proxima-db.yaml
apiVersion: apps/v1
kind: Deployment 
metadata: 
 name: proxima-db-deployment 
 labels:
   app: proxima-db 
spec: 
 replicas: 1 
 selector: 
   matchLabels: 
    app: proxima-db 
 template:
  metadata: 
   labels: 
    app: proxima-db 
  spec:
    containers: 
      - name: proxima-db 
        image: chasesmith95/proxima-db-server:dev
        command: ["yarn", "run","start"]
        ports: 
         - containerPort: 50051
         - containerPort: 80 
---
apiVersion: v1
kind: Service
metadata: 
  name: proxima-db-service 
spec: 
  selector:
    app: proxima-db
  type: LoadBalancer
  ports: 
    - name: grpc
      protocol: TCP 
      port: 50051
      targetPort: 50051
      nodePort: 30081
    - name: rest
      protocol: TCP 
      port: 80
      targetPort: 80
      nodePort: 30080
