.kube/proxima-db-ingress-test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxima-db-ingress-test
  namespace: proxima-db 
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
spec:
  rules:
    - host: proxima-db.cluster.test.proxima.one
      http:
        paths:
         - pathType: Prefix 
           path: /
           backend:
            service:
              name: proxima-db-service
              port:
                number: 80
           
# ---
# apiVersion: certmanager.k8s.io/v1alpha1
# kind: Certificate
# metadata:
#   name: proxima-db-ingress
# spec:
#   secretName: ingress-tls              
#   issuerRef:
#     kind: ClusterIssuer                    
#     name: letsencrypt
#   commonName: proxima-db.cluster.prod.proxima.one
#   dnsNames:                                 
#   - proxima-db.cluster.prod.proxima.one
#   acme:
#     config:
#     - http01:
#         ingressClass: nginx                 
#       domains:
#       - proxima-db.cluster.prod.proxima.one
