.kube/proxima-db-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxima-db
  namespace: proxima-db
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/proxy-body-size: 1000m
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
    - host: proxima-db.cluster.prod.proxima.one
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: proxima-db-service
              port:
                number: 80
  tls:
  - hosts:
    - proxima-db.cluster.prod.proxima.one
    secretName: ingress-tls
